# GeoTransformerPI

./: .gitignore  pyproject.toml
experiments/geotransformer.3dmatch.stage4.gse.k3.max.oacl.stage2.sinkhorn/: demo.py  eval.py  eval_dgr.py  loss.py  test.py  trainval.py
experiments/geotransformer.kitti.stage5.gse.k3.max.oacl.stage2.sinkhorn/: eval.py  loss.py  test.py
experiments/geotransformer.modelnet.rpmnet.stage4.gse.k3.max.oacl.stage2.sinkhorn/: loss.py  test.py  trainval.py
geotransformer/datasets/registration/threedmatch/: dataset.py
geotransformer/engine/: base_trainer.py
geotransformer/modules/geotransformer/: local_global_registration.py  point_matching.py  superpoint_matching.py  superpoint_target.py
geotransformer/modules/kpconv/: kpconv.py
geotransformer/modules/ops/: grid_subsample.py  grid_subsample_py.py  pointcloud_partition.py  radius_search.py  radius_search_py.py  transformation.py
geotransformer/modules/registration/: matching.py  procrustes.py
geotransformer/modules/sinkhorn/: learnable_sinkhorn.py
geotransformer/modules/transformer/: lrpe_transformer.py
geotransformer/utils/: torch.py
